k8s-login-app/k8s/web-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-app
  labels:
    app: login-app
spec:
  selector:
    app: login-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
