k8s-login-app/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-app
  labels:
    app: login-app
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 3000
      nodePort: 30080
  selector:
    app: login-app
